--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
     <link rel="preconnect" crossorigin="anonymous" href="https://cdn.jsdelivr.net">
     <link rel="dns-prefetch" href="https://utteranc.es">
-    <title>{%- include components/title.html -%}</title>
+    <title>{%- include title.html -%}</title>
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=contain">
     <meta name="copyright" content="{{meta.title}} ©{{ page.date | date: '%Y' | default: site.time | date: '%Y' }} {{ page.author | default: meta.author }}">
