--- a/_includes/category.html
+++ b/_includes/category.html
@@ -1,2 +1,2 @@
-{% assign collection_name = page.category %}{% assign grouped_items = site[collection_name] | group_by: "date" %}{% for year_group in grouped_items %}<p></p><h3>{{ year_group.name | date: "%Y" }}</h3>{% for item in year_group.items %}
+{% assign folder = "https://" | append: site.base.url | append: "/" | append: site.base.folder %}{% assign collection_name = page.category %}{% assign grouped_items = site[collection_name] | group_by: "date" %}{% for year_group in grouped_items %}<p></p><h3>{{ year_group.name | date: "%Y" }}</h3>{% for item in year_group.items %}
 <p class="list"><a href="{{ folder }}{{ item.url }}"><span>{{ item.date | date: "%b. %d" }}</span> {{ item.title }}</a></p>{% endfor %}{% endfor %}
