--- a/assets/codeCraft.css
+++ b/assets/codeCraft.css
@@ -741,7 +741,7 @@ main ol li {
 
     .controllers {
         margin-top: 2rem;
-        gap: 1.5rem;
+        gap: .5rem;
         display: flex;
         justify-content: center;
     }
@@ -790,7 +790,7 @@ main ol li {
 
         .controllers {
             margin-top: 0!important;
-            gap: .5rem!important;
+            gap: 1.5rem!important;
         }
 
         .controllers label {
