--- a/assets/codeCraft.css
+++ b/assets/codeCraft.css
@@ -271,11 +271,10 @@ main ol li {
     }
 
     #index {
+        width: 95%;
         position: relative;
-        width: 77.5%;
         min-width:260px;
         max-width: 1200px;
-        margin: 0 auto;
     }
 
     #chapters {
@@ -830,6 +829,11 @@ main ol li {
     }
 
     @media (width > 575px) {
+
+        #index {
+            margin: 0 auto;
+            width: 77.5%;
+        }
 
         div.highlighter-rouge {
             padding-left: 1.5rem;
