heading fix css

--- a/assets/codeCraft.css
+++ b/assets/codeCraft.css
@@ -868,7 +868,7 @@ main ol li {
 
         main h1 {
             padding-right: 0;
-            margin-left:0;
+            margin-left: auto;
         }
 
 
