heading fix css2

--- a/assets/codeCraft.css
+++ b/assets/codeCraft.css
@@ -91,6 +91,7 @@ main ol li {
     .cp_embed_wrapper {
         margin:0;
         width:100%;
+        margin-left: -1.3rem;
     }
 
 
@@ -854,6 +855,10 @@ main ol li {
 
 
     @media (width > 575px) {
+
+        .cp_embed_wrapper {
+            margin-left: -1.01rem;
+        }
 
         table {
             left: 0;
