--- a/assets/codeCraft.css
+++ b/assets/codeCraft.css
@@ -90,11 +90,15 @@ main ol li {
 
     .cp_embed_wrapper {
         margin:0;
-        width:100%;
         min-width: 100%;
+        margin: 1em 0;
         margin-left: -1.3rem;
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid;
     }
-
 
     h2::before {
         display: none;
