--- a/_layouts/codeCraft.html
+++ b/_layouts/codeCraft.html
@@ -43,6 +43,6 @@
         import lunr from 'https://cdn.jsdelivr.net/npm/lunr@{{ site.version.lunr }}/+esm';
         import { codeCraft } from '{{ js }}';
         codeCraft.init(lunr);
-    </script>
+    </script>{% if page.codepen %}<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>{% endif %}
 </body>
 </html>
