--- a/assets/codeCraft.css
+++ b/assets/codeCraft.css
@@ -97,7 +97,7 @@ main ol li {
         display: flex;
         align-items: center;
         justify-content: center;
-        border: 2px solid;
+        border: 2px transparent;
     }
 
     h2::before {
