--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,6 +41,7 @@
     <link rel="preconnect"   crossorigin="anonymous" href="https://translate.google.com">
     <link rel="preconnect"   crossorigin="anonymous" href="https://translate.googleapis.com">
     <link rel="canonical" href="{{ folder }}{{ page.url }}">
+    <link type="application/atom+xml" rel="alternate" href="{{folder}}/feed.xml" title="design﹢code">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
